    @staticmethod
    def get_foo():
        ....

  But now you need to write::

    @staticmethod
    @App.path(model=Foo, path='bar')
    def get_foo():
        ....

- **Breaking change** You cannot use a Morepath ``path`` directive on
  a ``@classmethod`` anymore.

- **Breaking change**. If you use settings, you need to replace any
  references to ``app.registry.settings`` to
  ``app.config.setting_registry``..

- Add `request.class_link`. This lets you link using classes instead
  of instances as an optimization. In some cases instantiating an
  object just so you can generate a link to it is relatively
  expensive. In that case you can use `request.class_link`
  instead. This lets you link to a model class and supply a
  `variables` dictionary manually.

- **Breaking change**. In Morepath versions before this there was an
  class attribute on ``App`` subclasses called ``registry``. This was
  a giant mixed registry which subclassed a lot of different
  registries used by Morepath (reg registry, converter registry,
  traject registry, etc). The Dectate configuration system allows us
  to break this registry into a lot of smaller interdependent registries
  that are configured in the ``config`` of the directives.

  While normally you shouldn't be, if you were somehow relying on
  ``App.registry`` in your code you should now rewrite it to use
  ``App.config.reg_registry``, ``App.config.setting_registry``,
  ``App.config.path_registry`` etc.

0.12 (2016-01-27)
=================

- **Breaking change**. The ``request.after`` function is now called even if
  the response was directly created by the view (as opposed to the view
  returning a value to be rendered by morepath). Basically, ``request.after``
  is now guaranteed to be called if the response's HTTP status code lies within
  the 2XX-3XX range.

  See https://github.com/morepath/morepath/issues/346

- Fixed a typo in the `defer_link` documentation.
